# Eyes-on-me

./: CHANGELOG.md  README.md  README_EN.md  Todo.md
.github/workflows/: eyes-on-me-ci.yml  eyes-on-me-release.yml
_scripts/: package-target.sh  run-dev.sh  run-server-public.sh  run-server.sh  run-web-dev.sh
client-desktop/: Cargo.toml
client-desktop/src/: browser.rs  config.rs  event.rs  idle.rs  main.rs  screen_lock.rs  transport.rs
client-desktop/src/platform/: linux.rs  macos.rs  windows.rs
client-server/: Cargo.toml  build.rs
client-server/src/: app_state.rs  config.rs  db.rs  main.rs
client-server/src/routes/: api.rs  mod.rs  static_files.rs
shared/src/: lib.rs
web/src/: App.vue  api.ts  router.ts  style.css  types.ts
web/src/components/: DeviceSummaryCard.vue  LargeTreemap.vue  treemap.ts
web/src/lib/: activity.ts  analysis-range.ts  device-treemap.ts
web/src/views/: DeviceAnalysisView.vue  DeviceDetailView.vue  HomeView.vue
