[package]
name = "client-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
eyes-on-me-shared = { path = "../shared" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWorkspace", "NSRunningApplication", "libc"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSDate", "NSNotification", "NSObjCRuntime", "NSOperation", "NSRunLoop", "NSString", "block2"] }

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.24"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging"] }
winapi = { version = "0.3", features = ["winuser", "sysinfoapi", "winnt"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
