[package]
name = "client-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
amiokay-shared = { path = "../shared" }
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
futures-util = "0.3"
include_dir = "0.7"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
time = { version = "0.3", features = ["local-offset", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
